--- a/src/components/TwitterPosts/styles.scss
+++ b/src/components/TwitterPosts/styles.scss
@@ -2,9 +2,21 @@
 
 .swiper {
   width: calc(100% - 100px);
-  height: 295px;
+  height: 260px;
   padding: 0 50px;
   user-select: none;
+
+  @media screen and (max-width: 800px) {
+    height: 225px;
+  }
+
+  @media screen and (max-width: 640px) {
+    height: 205px;
+  }
+
+  .swiper-pagination {
+    bottom: 0 !important;
+  }
 }
 
 .swiper-slide {
@@ -46,6 +58,7 @@
   background: $black;
   box-shadow: 0 0 10px 5px rgba(32,32,29,0.8);
   color: $gradient-fallback;
+  top: calc(50% - 20px) !important;
 }
 
 .twitter-post {
@@ -59,6 +72,14 @@
     & > img {
       width: 100%;
       margin-bottom: -6px;
+    }
+
+    @media screen and (max-width: 800px) {
+      max-height: 200px;
+    }
+
+    @media screen and (max-width: 640px) {
+      max-height: 180px;
     }
   }
 }
