--- a/src/components/ReceiveForm/ReceiveForm.scss
+++ b/src/components/ReceiveForm/ReceiveForm.scss
@@ -15,13 +15,42 @@
         }
     }
 
+    &--detailed {
+        #addresses {
+            flex-direction: column;
+        }
+
+        #tokenAddress, #addresses .info-cell__content {
+            font-size: 11px;
+        }
+
+        .receive-form__metamask {
+            background: none;
+            width: 20px;
+            height: 20px;
+            margin-right: 4px;
+        }
+    }
+
+    &__switch {
+        display: flex;
+        align-items: center;
+        position: absolute;
+        right: 40px;
+        top: 102px;
+
+        &__title {
+            font-size: 15px;
+        }
+    }
+
     &__content {
         background: $black;
         background-clip: padding-box;
         border: solid 1px transparent;
         position: relative;
         border-radius: 24px;
-        padding: 32px 40px;
+        padding: 32px 34px;
         box-sizing: border-box;
         width: 100%;
 
@@ -59,13 +88,14 @@
     }
 
     &__token-address {
+        position: relative;
+
         a {
             color: white;
         }
         &__buttons {
             display: flex;
             justify-content: center;
-            align-items: center;
         }
 
         .info-cell__content {
@@ -138,4 +168,12 @@
             padding-bottom: 0;
         }
     }
+
+    a {
+        color: inherit !important;
+    }
+}
+
+.copy {
+    cursor: pointer;
 }
