--- a/src/components/GenUrlPopup/styles.scss
+++ b/src/components/GenUrlPopup/styles.scss
@@ -29,6 +29,13 @@
     padding: 2px;
   }
 
+  .gen-url__text {
+    @media screen and (max-width: 500px) {
+      justify-content: center;
+      flex: 1;
+    }
+  }
+
   @media screen and (max-width: 500px) {
     width: 300px;
     padding: 30px 15px 10px;
